--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "core-js": "3.6.5",
     "element-ui": "2.13.2",
     "js-cookie": "2.2.0",
+    "maki": "^2.1.0",
     "mapbox-gl": "^3.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
@@ -26,7 +27,9 @@
     "vue": "2.6.10",
     "vue-danmaku": "^1.7.2",
     "vue-router": "3.0.6",
-    "vuex": "3.1.0"
+    "vue-wordcloud": "^1.1.1",
+    "vuex": "3.1.0",
+    "wordcloud": "^1.2.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.4.4",
